--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-native-pager-view": "6.7.1",
     "expo-notifications": "~0.31.4",
     "expo-updates": "~0.28.17",
-    "expo-linear-gradient": "~14.1.5"
+    "expo-linear-gradient": "~14.1.5",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
