--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "expo-notifications": "~0.31.4",
     "expo-updates": "~0.28.17",
     "expo-linear-gradient": "~14.1.5",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
