--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "expo-updates": "~0.28.17",
     "expo-linear-gradient": "~14.1.5",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "react-native-svg": "15.11.2"
+    "react-native-svg": "15.11.2",
+    "expo-device": "~7.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
