--- a/app.json
+++ b/app.json
@@ -33,6 +33,19 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
+      ],[
+        "expo-notifications",
+        {
+          "icon": "./assets/images/notification-icon.png",
+          "color": "#ffffff",
+          "iosDisplayInForeground": true,
+          "sounds": [
+            {
+              "name": "default",
+              "source": "./assets/sounds/notification.mp3"
+            }
+          ]
+        }
       ]
     ],
     "experiments": {
