--- a/app.json
+++ b/app.json
@@ -48,7 +48,8 @@
           ]
         }
       ],
-      "react-native-google-mobile-ads"
+      "react-native-google-mobile-ads",
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true
