--- a/eas.json
+++ b/eas.json
@@ -10,6 +10,11 @@
       "channel": "development",
       "env": {}
     },
+    "simulator": {
+      "ios": {
+        "simulator": true
+      }
+    },
     "preview": {
       "distribution": "internal",
       "channel": "preview",
