--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,13 +87,13 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.dailycheckin"
+    namespace 'com.sonkey.dailycheckin'
     defaultConfig {
-        applicationId "com.dailycheckin"
+        applicationId 'com.sonkey.dailycheckin'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0"
+        versionName "0.0.0"
     }
     signingConfigs {
         debug {
