--- a/app.json
+++ b/app.json
@@ -64,9 +64,7 @@
         "projectId": "c68eaa3b-d93b-41ef-bf4b-bd4beba42e2d"
       }
     },
-    "runtimeVersion": {
-      "policy": "appVersion"
-    },
+    "runtimeVersion": "0.0.0",
     "updates": {
       "url": "https://u.expo.dev/c68eaa3b-d93b-41ef-bf4b-bd4beba42e2d"
     }
