--- a/eas.json
+++ b/eas.json
@@ -8,7 +8,10 @@
       "developmentClient": true,
       "distribution": "internal",
       "channel": "development",
-      "env": {}
+      "env": {},
+      "ios": {
+        "simulator": true
+      }
     },
     "simulator": {
       "ios": {
