--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "daily-check-in",
+    "name": "Daily Check-in",
     "slug": "daily-check-in",
     "version": "0.0.0",
     "orientation": "portrait",
